--- a/.gitignore
+++ b/.gitignore
@@ -28,13 +28,13 @@ wheels/
 *.egg
 *.db
 *.pid
-
+*.pyc
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
-
+staticfiles/
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
